Add db layer and simple bearer auth
