# apimodel/registration_request.go
@@ -1,0 +1,81 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package apimodel
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// RegistrationRequest registration request
+// swagger:model RegistrationRequest
+type RegistrationRequest struct {
+
+	// email
+	// Required: true
+	Email string `json:"email"`
+
+	// password
+	// Required: true
+	Password string `json:"password"`
+}
+
+// Validate validates this registration request
+func (m *RegistrationRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateEmail(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validatePassword(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *RegistrationRequest) validateEmail(formats strfmt.Registry) error {
+
+	if err := validate.RequiredString("email", "body", string(m.Email)); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *RegistrationRequest) validatePassword(formats strfmt.Registry) error {
+
+	if err := validate.RequiredString("password", "body", string(m.Password)); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *RegistrationRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *RegistrationRequest) UnmarshalBinary(b []byte) error {
+	var res RegistrationRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
