# restapi/operations/get_resource.go
@@ -1,0 +1,104 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	middleware "github.com/go-openapi/runtime/middleware"
+	strfmt "github.com/go-openapi/strfmt"
+	swag "github.com/go-openapi/swag"
+)
+
+// GetResourceHandlerFunc turns a function with the right signature into a get resource handler
+type GetResourceHandlerFunc func(GetResourceParams, interface{}) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetResourceHandlerFunc) Handle(params GetResourceParams, principal interface{}) middleware.Responder {
+	return fn(params, principal)
+}
+
+// GetResourceHandler interface for that can handle valid get resource params
+type GetResourceHandler interface {
+	Handle(GetResourceParams, interface{}) middleware.Responder
+}
+
+// NewGetResource creates a new http.Handler for the get resource operation
+func NewGetResource(ctx *middleware.Context, handler GetResourceHandler) *GetResource {
+	return &GetResource{Context: ctx, Handler: handler}
+}
+
+/*GetResource swagger:route GET /v1/resource getResource
+
+Test auth resource
+
+*/
+type GetResource struct {
+	Context *middleware.Context
+	Handler GetResourceHandler
+}
+
+func (o *GetResource) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		r = rCtx
+	}
+	var Params = NewGetResourceParams()
+
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		r = aCtx
+	}
+	var principal interface{}
+	if uprinc != nil {
+		principal = uprinc
+	}
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params, principal) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
+
+// GetResourceOKBody get resource o k body
+// swagger:model GetResourceOKBody
+type GetResourceOKBody struct {
+
+	// text
+	Text string `json:"text,omitempty"`
+}
+
+// Validate validates this get resource o k body
+func (o *GetResourceOKBody) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (o *GetResourceOKBody) MarshalBinary() ([]byte, error) {
+	if o == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(o)
+}
+
+// UnmarshalBinary interface implementation
+func (o *GetResourceOKBody) UnmarshalBinary(b []byte) error {
+	var res GetResourceOKBody
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*o = res
+	return nil
+}
